--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -48,6 +48,7 @@
 
 body {
   font-family: var(--font-family);
+  color: var(--primary-text-color);
   background: var(--background-color);
   max-height: 100vh;
 }
