--- a/src/renderer/src/assets/styles/global/_variables.scss
+++ b/src/renderer/src/assets/styles/global/_variables.scss
@@ -33,21 +33,6 @@ $borderRadiusFull: 9999px;
 
 $transitionDuration: 0.3s;
 
-$dropShadow: none;
-$dropShadowSm: none;
-$dropShadowHover: none;
-$shadowColorDark: none;
-
-$shadow:
-  0.3rem 0.3rem 0.6rem var(--greyLight-2),
-  -0.2rem -0.2rem 0.5rem var(--white);
-
-$shadowHover:
-  0.15rem 0.15rem 0.3rem var(--greyLight-2),
-  -0.1rem -0.1rem 0.25rem var(--white);
-
-$shadowDark: 0.15rem 0.15rem 0.3rem var(--greyLight-2);
-
-$innerShadow:
-  inset 0.2rem 0.2rem 0.5rem var(--greyLight-2),
-  inset -0.2rem -0.2rem 0.5rem var(--white);
+$shadow: var(--shadow-flat);
+$shadowHover: var(--shadow-flat--hover);
+$innerShadow: var(--shadow-pressed);
