--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -5,14 +5,23 @@
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --ripple-color: rgba(var(--primary-color-rgb), 0.4);
+
+  --primary-color: #7c3aed;
+  --primary-color-rgb: 147, 51, 234;
+  --primary-color--lighter: #a855f7;
+  --primary-color--lighter-rgb: 168, 85, 247;
+  --primary-color--lightest: #c4b5fd;
+  --primary-color--lightest-rgb: 196, 181, 253;
+
+  // --primary-color: #a172f3;
+  // --primary-color-rgb: 161, 114, 243;
+  // --primary-color--lighter: #a854f7;
+  // --primary-color--lightest: #d9c7fa;
+  // --primary-color--lightest-rgb: 217, 199, 250;
 }
 
 :root {
-  --primary-color: #7c3aed;
-  --primary-color-rgb: 147, 51, 234;
-  --primary-color--lighter: #a854f7;
-  --primary-color--lightest: #c4b5fd;
-  --primary-color--lightest-rgb: 196, 181, 253;
+  color-scheme: light;
 
   --primary-text-color: #596377;
   --secondary-text-color: #6b7280;
@@ -33,14 +42,11 @@
     inset -3px -3px 6px var(--shadow-color--light);
 
   --radio-check-dot-color: #bec8e4;
+  --color-swatch-wrapper-color: #bec8e4;
 }
 
 .dark {
-  --primary-color: #a172f3;
-  --primary-color-rgb: 161, 114, 243;
-  --primary-color--lighter: #a854f7;
-  --primary-color--lightest: #d9c7fa;
-  --primary-color--lightest-rgb: 217, 199, 250;
+  color-scheme: dark;
 
   --primary-text-color: #adadad;
   --secondary-text-color: #777e8b;
@@ -62,6 +68,7 @@
     inset -2px -2px 6px var(--shadow-color--light);
 
   --radio-check-dot-color: #838383;
+  --color-swatch-wrapper-color: #3d3d3d;
 }
 
 *,
@@ -100,7 +107,7 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--primary-color--lighter);
+  background: var(--primary-color);
   border-radius: 10px;
 }
 
