--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -88,6 +88,11 @@ a {
   text-decoration: none;
 }
 
+a,
+img {
+  -webkit-user-drag: none;
+}
+
 #app {
   position: relative;
   min-height: 100vh;
