--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -124,3 +124,9 @@ img {
   box-shadow: $innerShadow;
   border-radius: 10px;
 }
+
+.single-line-clamp {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
