--- a/src/renderer/src/assets/styles/global/_mixins.scss
+++ b/src/renderer/src/assets/styles/global/_mixins.scss
@@ -6,6 +6,22 @@
   white-space: nowrap;
 }
 
+@mixin positionCenterY {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+@mixin positionCenterX {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@mixin positionCenterXY {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @mixin focused() {
   outline: 2px solid var(--outline-color);
 }
