--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -52,8 +52,8 @@
 
   --background-color: #2a2c31;
 
-  --disabled-text-color: #71717a;
-  --disabled-bg-color: #d4d4d8;
+  --disabled-text-color: #838383;
+  --disabled-bg-color: #505050;
 
   --divider-color: #3a3a3a;
 
