--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -42,6 +42,9 @@
   --color-swatch-wrapper-color: #bec8e4;
   --artist-img-bg-color: #e0e0e0;
   --artist-img-icon-color: #888;
+
+  --toggle-button-dot-color--off: #bec8e4;
+  --toggle-button-dot-color--on: #e4ebf5;
 }
 
 .dark {
@@ -72,6 +75,9 @@
   --color-swatch-wrapper-color: #3d3d3d;
   --artist-img-bg-color: #393939;
   --artist-img-icon-color: #adadad;
+
+  --toggle-button-dot-color--off: #838383;
+  --toggle-button-dot-color--on: #2a2c31;
 }
 
 *,
