--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -128,6 +128,9 @@ img {
 ::-webkit-scrollbar-thumb {
   background: var(--primary-color);
   border-radius: 10px;
+  &:hover {
+    background: var(--primary-color--lighter);
+  }
 }
 
 ::-webkit-scrollbar-track {
