--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -75,9 +75,14 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  border-radius: $borderRadiusSm;
 
   &:hover {
     text-decoration: underline;
+  }
+
+  &:focus-visible {
+    @include focused;
   }
 }
 
