--- a/src/renderer/src/assets/styles/style.scss
+++ b/src/renderer/src/assets/styles/style.scss
@@ -75,6 +75,7 @@ a {
   color: inherit;
   text-decoration: none;
   border-radius: $borderRadiusSm;
+  cursor: pointer;
 
   &:hover {
     text-decoration: underline;
