--- a/src/renderer/src/assets/styles/global/_variables.scss
+++ b/src/renderer/src/assets/styles/global/_variables.scss
@@ -14,6 +14,7 @@ $sideNavLinksGap: 0.5rem;
 
 // Right Side Pane
 $rightSidePaneWidth: 20rem;
+$rightSidePaneCollapsedWidth: 2.5rem;
 
 // Center Pane
 $centerPaneHeaderHeight: 3.5rem;
